@@ -23,7 +23,6 @@ import static org.jsonschema2pojo.integration.util.CodeGenerationHelper.*;
 import java.beans.IntrospectionException;
 import java.beans.PropertyDescriptor;
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
 import org.jsonschema2pojo.integration.util.Jsonschema2PojoRule;
@@ -41,13 +40,12 @@ public class PropertiesIT {
     private final ObjectMapper mapper = new ObjectMapper();
 
     @Test
-    @SuppressWarnings("rawtypes")
-    public void propertiesWithNullValuesAreOmittedWhenSerialized() throws ClassNotFoundException, IntrospectionException, InstantiationException, IllegalAccessException, InvocationTargetException {
+    public void propertiesWithNullValuesAreOmittedWhenSerialized() throws IntrospectionException, ReflectiveOperationException {
 
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/properties/nullProperties.json", "com.example");
 
-        Class generatedType = resultsClassLoader.loadClass("com.example.NullProperties");
-        Object instance = generatedType.newInstance();
+        Class<?> generatedType = resultsClassLoader.loadClass("com.example.NullProperties");
+        Object instance = generatedType.getDeclaredConstructor().newInstance();
 
         Method setter = new PropertyDescriptor("property", generatedType).getWriteMethod();
         setter.invoke(instance, "value");
@@ -61,13 +59,12 @@ public class PropertiesIT {
     }
 
     @Test
-    @SuppressWarnings("rawtypes")
-    public void propertiesAreSerializedInCorrectOrder() throws ClassNotFoundException, IntrospectionException, InstantiationException, IllegalAccessException, InvocationTargetException {
+    public void propertiesAreSerializedInCorrectOrder() throws IntrospectionException, ReflectiveOperationException {
 
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/properties/orderedProperties.json", "com.example");
 
-        Class generatedType = resultsClassLoader.loadClass("com.example.OrderedProperties");
-        Object instance = generatedType.newInstance();
+        Class<?> generatedType = resultsClassLoader.loadClass("com.example.OrderedProperties");
+        Object instance = generatedType.getDeclaredConstructor().newInstance();
 
         new PropertyDescriptor("type", generatedType).getWriteMethod().invoke(instance, "1");
         new PropertyDescriptor("id", generatedType).getWriteMethod().invoke(instance, "2");
@@ -99,15 +96,14 @@ public class PropertiesIT {
     }
 
     @Test
-    @SuppressWarnings("rawtypes")
-    public void wordDelimitersCausesCamelCase() throws ClassNotFoundException, IntrospectionException, InstantiationException, IllegalAccessException, InvocationTargetException {
+    public void wordDelimitersCausesCamelCase() throws IntrospectionException, ReflectiveOperationException {
 
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/properties/propertiesWithWordDelimiters.json", "com.example",
                 config("usePrimitives", true, "propertyWordDelimiters", "_ -"));
 
-        Class generatedType = resultsClassLoader.loadClass("com.example.WordDelimit");
+        Class<?> generatedType = resultsClassLoader.loadClass("com.example.WordDelimit");
 
-        Object instance = generatedType.newInstance();
+        Object instance = generatedType.getDeclaredConstructor().newInstance();
 
         new PropertyDescriptor("propertyWithUnderscores", generatedType).getWriteMethod().invoke(instance, "a_b_c");
         new PropertyDescriptor("propertyWithHyphens", generatedType).getWriteMethod().invoke(instance, "a-b-c");
@@ -159,7 +155,7 @@ public class PropertiesIT {
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/properties/propertiesAreUpperCamelCase.json", "com.example");
         Class<?> generatedType = resultsClassLoader.loadClass("com.example.UpperCase");
 
-        Object instance = generatedType.newInstance();
+        Object instance = generatedType.getDeclaredConstructor().newInstance();
 
         new PropertyDescriptor("property1", generatedType).getWriteMethod().invoke(instance, "1");
         new PropertyDescriptor("propertyTwo", generatedType).getWriteMethod().invoke(instance, 2);
@@ -184,7 +180,7 @@ public class PropertiesIT {
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/properties/propertiesAreWithAllWordsUpperCases.json", "com.example");
         Class<?> generatedType = resultsClassLoader.loadClass("com.example.AllWordsUpperCase");
 
-        Object instance = generatedType.newInstance();
+        Object instance = generatedType.getDeclaredConstructor().newInstance();
 
         new PropertyDescriptor("propertyOne", generatedType).getWriteMethod().invoke(instance, "1");
         new PropertyDescriptor("propertyOneTwo", generatedType).getWriteMethod().invoke(instance, 2);
